@@ -1,0 +1,10 @@
+module Spec
+  module Runner
+    module Formatter
+      module Story
+        class HtmlFormatter < BaseTextFormatter
+        end
+      end
+    end
+  end
+end
