@@ -8,8 +8,10 @@ module Spec
         describe PlainTextFormatter do
           before :each do
             # given
-            @out = String.new
-            @reporter = PlainTextFormatter.new(@out)
+            @out = StringIO.new
+            @options = mock('options')
+            @options.stub!(:colour).and_return(false)
+            @reporter = PlainTextFormatter.new(@options, @out)
           end
         
           it 'should summarize the number of scenarios when the run ends' do
@@ -24,7 +26,7 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should include('3 scenarios')
+            @out.string.should include('3 scenarios')
           end
         
           it 'should summarize the number of successful scenarios when the run ends' do
@@ -39,7 +41,7 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should include('3 scenarios: 3 succeeded')
+            @out.string.should include('3 scenarios: 3 succeeded')
           end
         
           it 'should summarize the number of failed scenarios when the run ends' do
@@ -54,7 +56,7 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should contain("3 scenarios: 1 succeeded, 2 failed")
+            @out.string.should contain("3 scenarios: 1 succeeded, 2 failed")
           end
         
           it 'should summarize the number of pending scenarios when the run ends' do
@@ -69,7 +71,7 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should contain("3 scenarios: 1 succeeded, 0 failed, 2 pending")
+            @out.string.should contain("3 scenarios: 1 succeeded, 0 failed, 2 pending")
           end
         
           it "should only count the first failure in one scenario" do
@@ -85,7 +87,7 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should contain("3 scenarios: 1 succeeded, 2 failed")
+            @out.string.should contain("3 scenarios: 1 succeeded, 2 failed")
           end
         
           it "should only count the first pending in one scenario" do
@@ -101,7 +103,7 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should contain("3 scenarios: 1 succeeded, 0 failed, 2 pending")
+            @out.string.should contain("3 scenarios: 1 succeeded, 0 failed, 2 pending")
           end
         
           it "should only count a failure before the first pending in one scenario" do
@@ -117,7 +119,7 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should contain("3 scenarios: 1 succeeded, 1 failed, 1 pending")
+            @out.string.should contain("3 scenarios: 1 succeeded, 1 failed, 1 pending")
           end
         
           it 'should produce details of the first failure each failed scenario when the run ends' do
@@ -133,12 +135,12 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should contain("FAILURES:\n")
-            @out.should contain("1) story (scenario2) FAILED")
-            @out.should contain("RuntimeError: oops2")
-            @out.should_not contain("RuntimeError: oops2 - this one should not appear")
-            @out.should contain("2) story (scenario3) FAILED")
-            @out.should contain("RuntimeError: oops3")
+            @out.string.should contain("FAILURES:\n")
+            @out.string.should contain("1) story (scenario2) FAILED")
+            @out.string.should contain("RuntimeError: oops2")
+            @out.string.should_not contain("RuntimeError: oops2 - this one should not appear")
+            @out.string.should contain("2) story (scenario3) FAILED")
+            @out.string.should contain("RuntimeError: oops3")
           end
         
           it 'should produce details of each pending step when the run ends' do
@@ -149,9 +151,9 @@ module Spec
             @reporter.run_ended
           
             # then
-            @out.should contain("Pending Steps:\n")
-            @out.should contain("1) story (scenario2): todo2")
-            @out.should contain("2) story (scenario3): todo3")
+            @out.string.should contain("Pending Steps:\n")
+            @out.string.should contain("1) story (scenario2): todo2")
+            @out.string.should contain("2) story (scenario3): todo3")
           end
         
           it 'should document a story title and narrative' do
@@ -159,7 +161,7 @@ module Spec
             @reporter.story_started 'story', 'narrative'
           
             # then
-            @out.should contain("Story: story\n\n  narrative")
+            @out.string.should contain("Story: story\n\n  narrative")
           end
         
           it 'should document a scenario name' do
@@ -167,7 +169,7 @@ module Spec
             @reporter.scenario_started 'story', 'scenario'
           
             # then
-            @out.should contain("\n\nScenario: scenario")
+            @out.string.should contain("\n\nScenario: scenario")
           end
         
           it 'should document a step by sentence-casing its name' do
@@ -177,7 +179,7 @@ module Spec
             @reporter.step_succeeded :then, 'an outcome'
           
             # then
-            @out.should contain("\n\n  Given a context\n\n  When an event\n\n  Then an outcome")
+            @out.string.should contain("\n\n  Given a context\n\n  When an event\n\n  Then an outcome")
           end
         
           it 'should document additional givens using And' do
@@ -187,7 +189,7 @@ module Spec
             @reporter.step_succeeded :given, 'step 3'
           
             # then
-            @out.should contain("  Given step 1\n  And step 2\n  And step 3")
+            @out.string.should contain("  Given step 1\n  And step 2\n  And step 3")
           end
         
           it 'should document additional events using And' do
@@ -197,7 +199,7 @@ module Spec
             @reporter.step_succeeded :when, 'step 3'
           
             # then
-            @out.should contain("  When step 1\n  And step 2\n  And step 3")
+            @out.string.should contain("  When step 1\n  And step 2\n  And step 3")
           end
         
           it 'should document additional outcomes using And' do
@@ -207,7 +209,7 @@ module Spec
             @reporter.step_succeeded :then, 'step 3'
           
             # then
-            @out.should contain("  Then step 1\n  And step 2\n  And step 3")
+            @out.string.should contain("  Then step 1\n  And step 2\n  And step 3")
           end
         
           it 'should document a GivenScenario followed by a Given using And' do
@@ -216,14 +218,14 @@ module Spec
             @reporter.step_succeeded :given, 'a context'
           
             # then
-            @out.should contain("  Given scenario a scenario\n  And a context")
+            @out.string.should contain("  Given scenario a scenario\n  And a context")
           end
         
           it "should append PENDING for the first pending step" do
             @reporter.scenario_started('','')
             @reporter.step_pending(:given, 'a context')
           
-            @out.should contain('Given a context (PENDING)')
+            @out.string.should contain('Given a context (PENDING)')
           end
         
           it "should append PENDING for pending after already pending" do
@@ -231,14 +233,14 @@ module Spec
             @reporter.step_pending(:given, 'a context')
             @reporter.step_pending(:when, 'I say hey')
           
-            @out.should contain('When I say hey (PENDING)')
+            @out.string.should contain('When I say hey (PENDING)')
           end
         
           it "should append FAILED for the first failiure" do
             @reporter.scenario_started('','')
             @reporter.step_failed(:given, 'a context')
           
-            @out.should contain('Given a context (FAILED)')
+            @out.string.should contain('Given a context (FAILED)')
           end
         
           it "should append SKIPPED for the second failiure" do
@@ -246,7 +248,7 @@ module Spec
             @reporter.step_failed(:given, 'a context')
             @reporter.step_failed(:when, 'I say hey')
           
-            @out.should contain('When I say hey (SKIPPED)')
+            @out.string.should contain('When I say hey (SKIPPED)')
           end
         
           it "should append SKIPPED for the a failiure after PENDING" do
@@ -254,7 +256,7 @@ module Spec
             @reporter.step_pending(:given, 'a context')
             @reporter.step_failed(:when, 'I say hey')
           
-            @out.should contain('When I say hey (SKIPPED)')
+            @out.string.should contain('When I say hey (SKIPPED)')
           end
         
           it 'should print some white space after each story' do
@@ -262,7 +264,7 @@ module Spec
             @reporter.story_ended 'title', 'narrative'
           
             # then
-            @out.should contain("\n\n")
+            @out.string.should contain("\n\n")
           end
         end
       end
