@@ -62,7 +62,7 @@ module Spec
       
       it 'should add a documenter to the runner classes if one is specified' do
         # given
-        ARGV << "--format" << "specdoc"
+        ARGV << "--format" << "html"
         story_runner = mock('story runner', :null_object => true)
         scenario_runner = mock('scenario runner', :null_object => true)
         world_creator = mock('world', :null_object => true)
@@ -72,9 +72,9 @@ module Spec
         @runner_module::ScenarioRunner.stub!(:new).and_return(scenario_runner)
         
         # expect
-        world_creator.should_receive(:add_listener).with(an_instance_of(Spec::Runner::Formatter::Story::PlainTextFormatter))
-        story_runner.should_receive(:add_listener).with(an_instance_of(Spec::Runner::Formatter::Story::PlainTextFormatter))
-        scenario_runner.should_receive(:add_listener).with(an_instance_of(Spec::Runner::Formatter::Story::PlainTextFormatter))
+        world_creator.should_receive(:add_listener).with(an_instance_of(Spec::Runner::Formatter::Story::HtmlFormatter))
+        story_runner.should_receive(:add_listener).with(an_instance_of(Spec::Runner::Formatter::Story::HtmlFormatter))
+        scenario_runner.should_receive(:add_listener).with(an_instance_of(Spec::Runner::Formatter::Story::HtmlFormatter))
         
         # when
         @runner_module.story_runner
@@ -82,7 +82,7 @@ module Spec
       
       it 'should add any registered listener to the runner classes' do
         # given
-        ARGV << "--format" << "specdoc"
+        ARGV << "--format" << "html"
         story_runner = mock('story runner', :null_object => true)
         scenario_runner = mock('scenario runner', :null_object => true)
         world_creator = mock('world', :null_object => true)
